--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -40,7 +40,8 @@
 
 }
 
-.about-page {
+.about-page,
+.contact-page {
     .text-zone {
         position: absolute;
         left: 10%;
@@ -90,12 +91,13 @@
         }
 
     p {
-        font-style: 13px;
+        font-size: 13px;
         color: #fff;
         font-family: sans-serif;
         font-weight: 300;
         min-width: fit-content;
         animation: pulse 1s;
+        padding-bottom: 10px;
 
         &:nth-of-type(1){
             animation-delay: 1.1s;
