--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -4,17 +4,17 @@
   height: 609px;
   opacity: 0;
   position: absolute;
-  top: 0;
+  top: 20;
   right: 15%;
-  bottom: 0;
+  bottom: 20;
   left: auto;
   margin: auto;
 
   svg {
-    width: 100%;
+    width: 300%;
     height: auto;
     bottom: 0;
-    transform: rotateZ(30deg) !important;
+    // transform: rotateZ(30deg) !important;
   }
 
   .solid-logo {
@@ -26,7 +26,7 @@
     margin: auto;
     width: 100%;
     opacity: 0;
-    transform: rotateZ(30deg) !important;
+    // transform: rotateZ(30deg) !important;
     z-index: 1;
   }
 }
