--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -12,9 +12,17 @@
     h1 {
         color: #fff;
         font-size: 53px;
-        margin: 0;
-        font-family: 'Coolvetica';
+        font-family: 'futurist fixed-width';
         font-weight: 400;
+        margin-bottom: 20px;
+
+        .nbleLogo {
+
+            vertical-align: middle;
+            height: 100%;
+            width: 39%;
+
+        }
 
         &::before {
 
@@ -59,13 +67,37 @@
 h2 {
 
 color: #8d8d8d;
-margin-top: 20px;
+margin-top: 60px;
 font-weight: 400;
 font-size: 11px;
 font-family: sans-serif;
 letter-spacing: 3px;
 animation: fadeIn;
 animation: fadeIn 1s 1.8s backwards;
+
+
+&::before {
+
+            content: '<h2>';
+            font-family: '8-Bit HUD';
+            color: #ffd700;
+            font-size: 9px;
+            position: absolute;
+            left: 15px;
+            opacity: 0.6;
+        }
+&::after {
+
+                content: '<h2/>';
+                font-family: '8-Bit HUD';
+                color: #ffd700;
+                font-size: 9px;
+                position: absolute;
+                margin-left: 20px;
+                animation: fadeIn 1s 1.7s backwards;
+                opacity: 0.6;
+            }
+
 
 }
 
