--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -54,7 +54,7 @@
 
         h1 {
             font-size: 53px;
-            font-family: 'Coolvetica';
+            font-family: 'Futurist Fixed-Width';
             color: #ffd700;
             font-weight: 400;
             margin-top: 0;
