--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -1,4 +1,6 @@
-.home-page {
+.projects-page {
+
+    overflow-y: auto;
 
     .text-zone {
         position: absolute;
@@ -24,6 +26,7 @@
         font-family: 'futurist fixed-width';
         font-weight: 400;
         margin-bottom: 10px;
+        margin-left: 100px;
 
         .nbleLogo {
 
@@ -53,7 +56,7 @@
                 color: #ffd700;
                 font-size: 18px;
                 position: absolute;
-                margin-top: -40px;
+                margin-top: -400px;
                 margin-left: 20px;
                 animation: fadeIn 1s 1.7s backwards;
                 opacity: 0.6;
@@ -138,4 +141,89 @@ animation: fadeIn 1s 1.8s backwards;
     }
 }
 
+.jsparticles {
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1em;
+    margin-left: 100px; /* Adjust this value as needed */
+    margin-top: 100px;
+    margin-bottom: 50px;
+
+
+
+    &::before {
+
+        content: '<jsParticles>';
+        font-family: '8-Bit HUD';
+        color: #ffd700;
+        font-size: 18px;
+        position: absolute;
+        margin-top: -400px;
+        left: 15px;
+        opacity: 0.6;
+    }
+
+        &::after {
+
+            content: '</jsParticles>';
+            font-family: '8-Bit HUD';
+            color: #ffd700;
+            font-size: 18px;
+            position: absolute;
+            margin-top: 370px;
+            left: 395px;
+            animation: fadeIn 1s 1.7s backwards;
+            opacity: 0.6;
+        }
+  }
+  
+.container-home-page {
+
+    margin-left: 100px;
+
+
 }
+
+.angularcal {
+
+    align-items: center;
+    justify-content: center;
+    padding: 1em;
+    margin-left: 100px; /* Adjust this value as needed */
+    margin-top: 200px;
+    margin-bottom: 50px;
+    height: 100vh;
+
+
+
+    &::before {
+
+        content: '<angularCalendar>';
+        font-family: '8-Bit HUD';
+        color: #ffd700;
+        font-size: 18px;
+        position: absolute;
+        margin-top: -100px;
+        left: 15px;
+        opacity: 0.6;
+    }
+
+        &::after {
+
+            content: '</angularCalendar>';
+            font-family: '8-Bit HUD';
+            color: #ffd700;
+            font-size: 18px;
+            position: absolute;
+            margin-top: auto;
+            left: 600px;
+            animation: fadeIn 1s 1.7s backwards;
+            opacity: 0.6;
+        }
+
+}
+}
+
+
